# Yr13-Digital-Outcome

./: Index.html  Yr13-Digital-Outcome - Shortcut.lnk  pyproject.toml
13_Digit_project/: package-lock.json  (+1 more)
Version 2/: db.sqlite3  pyproject.toml  sample.json
Version 2/Club/: admin.py  forms.py  management_tags.py  models.py  views.py
Version 2/Club/migrations/: 0001_initial.py  0002_alter_userprofile_photo.py  0002_clubs_userprofile_clubimage.py
Version 2/Club/templatetags/: management_tags.py
Version 2/accounts/: admin.py  models.py  views.py
Version 2/accounts/migrations/: 0001_initial.py  0002_alter_customuser_password_and_more.py
Version 2/emailsystem/: apps.py  views.py
Version 2/frontend/: package-lock.json  rollup.config.js
Version 2/frontend/Join-Club/: Join-Club.svelte
Version 2/frontend/src/: App.svelte
Version 2/frontend/src/Componets/: Buttons.svelte
Version 2/myapp/: settings.py  urls.py
Version 2/myapp/LoginSystem/: apps.py  forms.py  models.py  views.py
Version 2/myapp/register/: forms.py  views.py
Version 2/myapp/spa/: views.py
Version 2/myapp/static/frontend/: bundle.css  bundle.js  bundle.js.map
Version 2/myapp/staticfiles/: staticfiles.json
Version 2/myapp/staticfiles/frontend/: bundle.cedab597ce0b.js  bundle.css  bundle.js  bundle.js.cfe78f6542a5.map
Version 2/myapp/templates/: CreateAClub.html  login.html
Version 2/myapp/templates/Club/: generic_club_page.html
Version 2/myapp/user/: admin.py
Version 2/myapp/user_access/: apps.py  views.py
Version 2/myapp2/: settings.py
Version 2/verification/: views.py
(+73 files in other folders)
